# cinfer

./: .gitignore  README.md  pyproject.toml
benchmark/dataframe/: cinfer.py  data.py  data_frame.py  langgraph.py  main.py  report.json  report.py  report.txt  runner_cinfer.py  runner_langgraph.py  scenarios.py  tools_cinfer.py  tools_langgraph.py  types.py
benchmark/python_sandbox/: README.md  cinfer.py  cinfer_no_language_dependency.py  data.py  langchain.py  main.py  report.json  report.py  report.txt  sandbox.py
benchmark/python_sandbox/data/: regions.csv  sales.csv
benchmark/python_sandbox/docker/: Dockerfile
cinfer/: __init__.py  agent.py  decorators.py  grammar.py  registry.py
examples/: README.md  default_types.py  depends.py  depends_grammar.py  python_agent.py
examples/json_agent_output/: result.json
examples/python_agent_output/: generated.py
grammar/python_grammar/: convert_python_gram.hs  python.gbnf
scripts/: validate_python_gbnf.py
