[project]
name = "cinfer"
version = "0.1.0"
description = "Code-Specific Inference Framework with grammar constraints"
authors = [
    {name = "Cinfer Team"}
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.2.0",
    "langchain-openai>=0.0.5",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
